<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PartyRadar</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_showHeatMap">Show heat map</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="action_showEventMap">Show map</string>
    <string name="action_showEventList">Show list</string>

    <string name="text_none">None</string>

    <string name="action_select_event">Attend party</string>
    <string name="action_logOutEvent">Leave party</string>
    <string name="title_select_event">Where to log in?</string>
    <string name="action_cancel">Cancel</string>
    <string name="select_event_noneAvailable">No event in your local area</string>
    <string name="attend_success">Logged in successfully</string>
    <string name="attend_failed">Login to event failed</string>
    <string name="login_progress_title">Logging in</string>
    <string name="login_progress_message">Please wait while logging in &#8230;</string>

    <string name="login_username">Enter username</string>
    <string name="login_password">Enter password</string>

    <!-- Preference keys for the last known location -->
    <string name="pref_last_location_lat" translatable="false">last_location_lat</string>
    <string name="pref_last_location_lng" translatable="false">last_location_lng</string>

    <!-- Default location (vienna) -->
    <string name="default_location_lat" translatable="false">48.208701</string>
    <string name="default_location_lng" translatable="false">16.372409</string>

    <!-- Max. range for requesting events (in meters) -->
    <string name="events_max_range" translatable="false">50000</string>

    <!-- Max. range for attending an event (in meters) -->
    <string name="attend_max_range" translatable="false">1000</string>

    <!-- for authenticator -->
    <string name="auth_account_type" translatable="false">partyradar.fhtw.at</string>
    <string name="content_authority" translatable="false">at.fhtw.partyradar.app</string>
    <string name="token_full_access_label">Full access to all events and locations</string>
    <string name="title_activity_login">Log in</string>
    <string name="text_wrong_user_password">Wrong username or password</string>
    <string name="text_provide_user_password">Please provide both username and password</string>

    <!-- for detail fragment -->
    <string name="activity_detail_title">Party Details</string>
    <string name="details_title">PARTY DETAILS</string>
    <string name="details_end">End at:</string>
    <string name="details_start">Start at:</string>
    <string name="details_nopicture">No picture available!</string>

    <!-- for event list fragment -->
    <string name="eventlist_title">PARTY OVERVIEW</string>
    <string name="title_filter">Filter by tags</string>
    <string name="eventlist_sorter_title">Sort by:</string>
    
    <!-- for login -->
    <string name="title_login">Please login with your credentials!</string>

    <string-array name="eventlist_sortby">
        <item>Distance</item>
        <item>Name</item>
        <item>Attendees</item>
    </string-array>

</resources>
