<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_select_event" android:title="@string/action_select_event"
        android:orderInCategory="1" app:showAsAction="ifRoom" android:visible="false" />

    <item android:id="@+id/action_refresh" android:title="@string/action_refresh"
        android:orderInCategory="10" app:showAsAction="never" />

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_logout" android:title="@string/action_logout"
        android:orderInCategory="200" app:showAsAction="never" />

</menu>
